# handyman-platform

./: Makefile  README.md  TESTING.md  TESTING_DELIVERY.md  TESTING_QUICKREF.md  conftest.py  docker-compose.yml  pytest.ini  requirements-test.txt  run_tests.py
.github/workflows/: tests.yml
postgres/init/: 01-create-dbs.sql
services/auth-service/: Dockerfile  alembic.ini  requirements.txt
services/availability-service/: Dockerfile  requirements.txt
services/booking-service/: Dockerfile  alembic.ini  requirements.txt
services/gateway-service/: Dockerfile  requirements.txt
services/handyman-service/: Dockerfile  alembic.ini  requirements.txt
services/match-service/: Dockerfile  alembic.ini  requirements.txt
services/notification-service/: Dockerfile  requirements.txt
services/search-service/: Dockerfile
services/user-service/: Dockerfile  alembic.ini  requirements.txt
shared/: pyproject.toml
shared/shared/: config.py  consumer.py  crud_helpers.py  database.py  db.py  events.py  idempotency.py  intervals.py  logging.py  mq.py  outbox_helpers.py  outbox_model.py  outbox_worker.py  rabbitmq.py  redis.py  roles.py
shared/shared/schemas/: auth.py  availability.py  bookings.py  handymen.py  match.py  notifications.py  users.py
tests/: README.md  service_loader.py
tests/failure_mode/: __init__.py  conftest.py  test_consumer_failures.py
tests/integration/: conftest.py  test_booking_lifecycle.py
tests/unit/: conftest.py  test_consumer.py  test_gateway_helpers.py  test_idempotency.py  test_intervals.py  test_match_services.py  test_mq.py  (+6 more)
(+126 files in other folders)
