[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for the handyman microservices"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.0",
    "fastapi>=0.110",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"