[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for the handyman microservices"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.0",
    "fastapi>=0.110",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "httpx>=0.25",
    "aiosqlite>=0.19",
    "coverage>=7.4",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"